--- a/css/gallery.css
+++ b/css/gallery.css
@@ -14,8 +14,9 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 1.6rem;
-  padding: 1.6rem;
+  /*padding: 1.6rem;*/
   align-items: center;
+  justify-items: center;
   text-align: center;
 }
 
