--- a/css/gallery.css
+++ b/css/gallery.css
@@ -29,11 +29,11 @@
   overflow: hidden;
 }
 
-.gallery-item img {
+.gallery-img {
   max-width: 100%;
   transition: all 0.4s;
 }
 
-.gallery-item img:hover {
+.gallery-img:hover {
   transform: scale(1.3);
 }
