--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@
   gap: 1.6rem;
   padding: 1.6rem;
   align-items: center;
-  /* text-align: center; */
+  text-align: center;
 }
 
 .gallery-description {
